# PyEduWebHT11

./: README.md  docker-compose.yml  env_sample  main.py  pyproject.toml
api/: schemas.py
api/conf/: config.py
api/database/: db.py  models.py
api/repository/: contacts.py  users.py
api/routes/: auth.py  contacts.py  users.py
api/services/: auth.py  cors.py  mailing.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 2a7c481fab66_missed_letter.py  437e3b61b14a_init.py  9b3bce5e618b_auth.py  c3a081b03dec_email_confirmation.py
postman/: PyEduWebHT12.postman_collection.json  PyEduWebHT12.postman_environment.json  PyEduWebHT13.postman_collection.json  PyEduWebHT13.postman_environment.json
tests/: test_route_contacts.py  test_unit_repository_contacts.py
